--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
+    "@capacitor/android": "^2.1.2",
     "@capacitor/core": "2.1.2",
     "@ionic/react": "5.1.1",
     "@ionic/react-router": "5.1.1",
@@ -32,9 +33,9 @@
     "react-scripts": "3.4.1",
     "subscriptions-transport-ws": "0.9.16",
     "typescript": "3.9.5",
-    "uniforms-ionic": "0.0.11",
     "uniforms": "3.0.0-alpha.4",
-    "uniforms-bridge-simple-schema-2": "3.0.0-alpha.4"
+    "uniforms-bridge-simple-schema-2": "3.0.0-alpha.4",
+    "uniforms-ionic": "0.0.11"
   },
   "scripts": {
     "start": "npm run build && cap serve",
